[gd_scene load_steps=4 format=3 uid="uid://i1dcpfn735kt"]

[ext_resource type="Texture2D" uid="uid://qp6opttc621i" path="res://assets/TVScreen.png" id="1_3lmvd"]
[ext_resource type="Script" path="res://Projectile/DamageArea.gd" id="1_u0lqo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h65i1"]
size = Vector2(300, 267)

[node name="DamageArea" type="Node2D"]
script = ExtResource("1_u0lqo")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, 2.5)
shape = SubResource("RectangleShape2D_h65i1")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(6.19353, 6.19353)
texture = ExtResource("1_3lmvd")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
